<resources>
    <string name="app_name">LostAndFound</string>
    <string name="cd_login_hero">Login illustration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="log_in">Log in</string>
    <string name="not_registered">Are you not registered yet?</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="report_lost_item">Report Lost Item</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notifications">Notifications</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="claim_object">Claim Object</string>
    <string name="send_email">Send email</string>
    <string name="escribe_tu_mensaje">Escribe tu mensaje</string>
    <string name="send_generate_code">Send + Generate Code</string>
    <string name="claim_request_was_verified">Claim Request was verified</string>
    <string name="_12_09_2025_at_1_43_pm">12/09/2025 at 1:43 PM</string>
    <string name="umbrella_found_by_martin">Umbrella found by Martin</string>
    <string name="link_to_post">link to post</string>
    <string name="sign_out">Sign Out</string>
    <string name="turn_on_notifications">Turn on notifications</string>
    <string name="recently_viewed">Recently Viewed</string>
    <string name="profile">Profile</string>
    <string name="it_seems_you_are_offline_for_offline_functionalties_check_your_recently_viewed_items">It seems you are offline. For offline functionalties, check your Recently Viewed Items.</string>
    <string name="items_you_opened_recently_will_appear_below">Items you opened recently will appear below</string>
    <string name="recently_viewed_items">Recently Viewed Items</string>
</resources>
