<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/nav_report"
        android:title="@string/report_lost_item"
        android:icon="@drawable/ic_report" />
    <item
        android:id="@+id/nav_notifications"
        android:title="@string/notifications"
        android:icon="@drawable/ic_notifications"/>

    <item
        android:id="@+id/nav_recent"
        android:title="@string/recently_viewed"
        android:icon="@drawable/ic_history"/>

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"/>

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"/>
</menu>
